--- a/game.html
+++ b/game.html
@@ -20,6 +20,7 @@
 
 <!-- INCLUDES DO JOGO -->
 
+<script src="src/itens.js"></script>
 <script src="src/saw.js"></script>
 <script src="src/player.js"></script>
 <script src="src/utils.js"></script>
