Purple Potion adicionado.
Purple potion que altera velocidade de spawn  e  velocidade das flechas implementado. Falta ajustar o pulo, implementar colecionaveis, e adicionar sons ao jogo, ajustar physic body do player e virar sprite para o respectivo lado (retirando o moonwalk)

--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
 <!-- INCLUDES DO JOGO -->
 
 <script src="src/itens.js"></script>
-<script src="src/saw.js"></script>
+<script src="src/arrow.js"></script>
 <script src="src/player.js"></script>
 <script src="src/utils.js"></script>
 <script src="src/game.js"></script>
